# train-simulator

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  ReadMe.adoc  caddy.dockerfile  deny.toml  flow.dot  fly.toml
.cargo/: config.toml
.run/: Clippy.run.xml  (+16 more)
client/: Cargo.toml
client/assets/shaders/: land.wgsl
client/assets/textures/: grass.ktx2  land.ktx2  rocks.ktx2  sand.ktx2  source.txt
client/graphics/: .gitignore  Cargo.toml  build.rs
client/graphics-simple/: Cargo.toml
client/graphics-simple/src/: lib.rs  render_map.rs
client/graphics/assets/shaders/: land.wgsl
client/graphics/src/: key_map.rs  lib.rs  states.rs
client/graphics/src/ai/: mod.rs
client/graphics/src/assets/: mod.rs
client/graphics/src/cameras/: mod.rs  orthographic.rs  perspective.rs  top_down.rs  util.rs
client/graphics/src/communication/: domain.rs  mod.rs
client/graphics/src/debug/: drawing.rs  fps.rs  mod.rs  test_axis.rs
client/graphics/src/game/: building.rs  mod.rs  test_objects.rs
client/graphics/src/game/buildings/: assets.rs  building.rs  demolishing.rs  mod.rs  production.rs  tracks.rs
client/graphics/src/game/buildings/tracks/: assets.rs  build.rs  plan.rs  positions.rs  preview.rs  spawn.rs
client/graphics/src/game/map_level/: assets.rs  mod.rs  zoning.rs
client/graphics/src/game/map_level/terrain/: mod.rs  water.rs
client/graphics/src/game/map_level/terrain/land/: advanced_land_material.rs  mod.rs  tiled_mesh_from_height_map_data.rs
client/graphics/src/game/map_level/terrain/water/: mod.rs
client/graphics/src/game/military/: assets.rs  mod.rs
client/graphics/src/game/transport/: assets.rs  building.rs  mod.rs  train.rs  train_layout.rs  ui.rs
client/graphics/src/game/vehicles/: mod.rs
client/graphics/src/hud/: bottom_panel.rs  domain.rs  helpers.rs  labels.rs  left_panel.rs  mod.rs  mode_selection.rs  top_panel.rs
client/graphics/src/level/: mod.rs
client/graphics/src/level/terrain/: water.rs
client/graphics/src/level/terrain/land/: advanced_land_material.rs  mod.rs
client/graphics/src/lights/: mod.rs  rotating_directional.rs
client/graphics/src/lobby/: mod.rs
client/graphics/src/network/: mod.rs
client/graphics/src/network/client_ping/: mod.rs
client/graphics/src/selection/: mod.rs
client/graphics/src/util/: geometry.rs  mod.rs  shapes.rs
client/single-player/: Cargo.toml
client/single-player/src/: lib.rs
client/single-player/web/: .gitignore  index.html  single.html
client/src/: main.rs  states.rs
client/src/cameras/: orthographic.rs  perspective.rs
client/src/communication/: domain.rs  mod.rs
client/src/debug/: fps.rs  test_axis.rs
client/src/level/: domain.rs  mod.rs
client/src/level/buildings/: mod.rs
client/src/level/terrain/: mod.rs  water.rs
client/src/level/terrain/land/: advanced_land_material.rs  domain.rs  mod.rs  stretched_mesh_from_height_map_data.rs  tiled_mesh_from_height_map_data.rs
client/src/lights/: mod.rs  rotating_directional.rs
client/web/: index.html
game/ai/: Cargo.toml
game/ai/src/: lib.rs  oct2025.rs  sep2025.rs
game/ai/src/oct2025/: industries.rs  military.rs  mod.rs  resource_links.rs  stations.rs  supply_chains.rs  transports.rs
game/integration-tests/: Cargo.toml
game/integration-tests/tests/: ai.rs  tracks.rs
game/level-generator/: Cargo.toml
game/level-generator/src/: height_map.rs  lib.rs  profile.rs  source.rs  zonings.rs
game/logic/: Cargo.toml
game/logic/assets/map_levels/: default.json
game/logic/src/: authentication_logic.rs  authentication_service.rs  connection_registry.rs  game_logic.rs  game_service.rs  game_state.rs  games.rs  games_service.rs  lib.rs  lobby.rs  lobby_logic.rs  logic.rs  server_state.rs
networking-renet/client/: Cargo.toml
networking-renet/client/src/client/: networking.rs
networking-renet/shared/: Cargo.toml
networking-simplenet/client/: Cargo.toml
networking-simplenet/client/src/: lib.rs
networking-simplenet/server/: Cargo.toml
networking-simplenet/server/src/: lib.rs
networking/client/: Cargo.toml
networking/client/src/: lib.rs
networking/client/src/client/: networking.rs  networking_visualisation.rs
networking/server/: Cargo.toml
networking/server/src/: lib.rs  metrics.rs
networking/server/src/server/: mod.rs  networking.rs  networking_visualisation.rs
shared/domain/: Cargo.toml
shared/domain/src/: building_info.rs  building_state.rs  building_type.rs  cargo_amount.rs  cargo_map.rs  client_command.rs  directional_edge.rs  edge_xz.rs  game_state.rs  game_time.rs  industry_type.rs  level.rs  lib.rs  map_level.rs  metrics.rs  movement_orders.rs  production_type.rs  resource_type.rs  scenario.rs  server_response.rs  station_type.rs  terrain.rs  tile_coords_xz.rs  tile_coverage.rs  tile_track.rs  track_length.rs  track_pathfinding.rs  track_planner.rs  track_type.rs  transport_info.rs  transport_state.rs  transport_type.rs  vector3.rs  vertex_coords_xz.rs  water.rs
shared/domain/src/building/: building_info.rs  building_state.rs  building_type.rs  industry_building_info.rs  industry_type.rs  military_building_info.rs  military_building_type.rs  military_unit_info.rs  military_unit_type.rs  mod.rs  resource_info.rs  resource_transform.rs  station_info.rs  station_type.rs  track_info.rs  track_state.rs
shared/domain/src/map_level/: map_level.rs  mod.rs  terrain.rs  zoning.rs
shared/domain/src/military/: mod.rs  projectile_info.rs  projectile_state.rs  projectile_stile.rs
shared/domain/src/players/: player_state.rs
shared/domain/src/supply_chain/: mod.rs
shared/domain/src/transport/: advancement.rs  cargo_loading.rs  cargo_processing.rs  mod.rs  movement_orders.rs  progress_within_tile.rs  tile_track.rs  track_length.rs  track_pathfinding.rs  track_planner.rs  track_type.rs  track_type_set.rs  transport_info.rs  transport_location.rs  transport_state.rs  transport_type.rs  transport_velocity.rs
shared/util/: Cargo.toml
shared/util/src/: bool_ops.rs  compression.rs  coords_xz.rs  direction_xz.rs  geometry.rs  grid_xz.rs  lib.rs  non_empty_circular_list.rs  random.rs  tap.rs
(+115 files in other folders)
