[package]
name = "train-simulator-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true