[package]
name = "graphics-simple"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
game-logic = { path = "../../game/logic"}
shared-domain = { path = "../../shared/domain" }

# TODO HIGH: Move to workspace dependencies
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
macroquad.workspace = true
