[package]
name = "graphics-simple"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
game-logic = { path = "../../game/logic"}
shared-domain = { path = "../../shared/domain" }

serde_json.workspace = true
macroquad.workspace = true

[dependencies.uuid]
workspace = true
features = ["v4", "serde"]

[dependencies.serde]
workspace = true
features = ["derive"]