[package]
name = "client-graphics"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# TODO: Use https://github.com/NiklasEi/bevy_asset_loader ?

shared-domain = { path = "../../shared/domain" }
shared-util = { path = "../../shared/util" }
game-logic = { path = "../../game/logic" }

serde.workspace = true
serde_json.workspace = true

bevy_mod_raycast.workspace = true

# https://github.com/jakobhellermann/bevy-inspector-egui
# https://crates.io/crates/bevy-inspector-egui/versions
# Pulls in egui and that has to match with Renet Bevy Visualizer egui version!
bevy-inspector-egui = {  version = "0.23.4", features = ["highlight_changes", "bevy_pbr"] }

# https://crates.io/crates/bevy/versions
[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "ktx2",
    "png",
    "tonemapping_luts",
    "zstd",
    "x11",
]

# These fail on WASM:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    # Later - dynamic_linking should be disabled for release builds.
    # From https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional:
    "dynamic_linking",

    # Next ones are development only, see https://bevyengine.org/news/bevy-0-12/#asset-preprocessing:
    "asset_processor",
    "embedded_watcher",
    "file_watcher",
    "multi-threaded", # Renamed to "multi_threaded" in newer Bevy versions
]


[target.'cfg(target_arch = "wasm32")'.dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "webgpu",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Later - dynamic_linking should be disabled for release builds.
# From https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional:
bevy_dylib = "0.13.2"
