[package]
name = "client-graphics"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
shared-domain = { path = "../../shared/domain" }
shared-util = { path = "../../shared/util" }

serde.workspace = true
serde_json.workspace = true
fastrand.workspace = true
bigdecimal.workspace = true

bevy_mod_raycast.workspace = true
bevy_egui.workspace = true
egui.workspace = true
bevy-inspector-egui.workspace = true

[dependencies.uuid]
workspace = true
features = ["v4"]

# https://crates.io/crates/bevy/versions
[dependencies.bevy]
workspace = true
features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "ktx2",
    "png",
    "tonemapping_luts",
    "zstd",
    "x11",
]

# These fail on WASM:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
workspace = true
features = [
    # From https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional:
    # and https://lib.rs/crates/bevy_dylib:
    # We do not include this, as we have to remove it anyway for release builds.
    # "dynamic_linking",

    # Next ones are development only, see https://bevyengine.org/news/bevy-0-12/#asset-preprocessing:
    "asset_processor",
    "embedded_watcher",
    "file_watcher",
    "multi-threaded", # TODO: Renamed to "multi_threaded" in newer Bevy versions
]


[target.'cfg(target_arch = "wasm32")'.dependencies.bevy]
workspace = true
features = [
    "webgpu",
]
