[package]
name = "client-single-player"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
client-graphics = { path = "../graphics" }
game-logic = { path = "../../game/logic"}
shared-domain = { path = "../../shared/domain" }

bevy.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
workspace = true
