[package]
name = "game-integration-tests"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
game-ai = { path = "../ai" }
game-logic = { path = "../logic" }
shared-domain = { path = "../../shared/domain" }
shared-util = { path = "../../shared/util" }
log.workspace = true
env_logger.workspace = true

