[package]
name = "game-level-generator"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-domain = { path = "../../shared/domain" }
shared-util = { path = "../../shared/util" }
geotiff.workspace = true
bincode.workspace = true
log.workspace = true
itertools.workspace = true
