[package]
name = "game-logic"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-domain = { path = "../../shared/domain" }
shared-protocol = { path = "../../shared/protocol" }
serde.workspace = true
serde_json.workspace = true
log = "0.4.21"