[package]
name = "game-logic"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Note - not allowed to have a `bevy` or any networking dependencies!
shared-domain = { path = "../../shared/domain" }
shared-protocol = { path = "../../shared/protocol" }
shared-util = { path = "../../shared/util" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
bimap.workspace = true
