[package]
name = "game-logic"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-domain = { path = "../../shared/domain" }
shared-util = { path = "../../shared/util" }

# Note - not allowed to have a `bevy` or any networking dependencies!
serde.workspace = true
serde_json.workspace = true
log.workspace = true
bimap.workspace = true
