[package]
name = "networking-renet-shared"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
game-logic = { path = "../../game/logic" }

bevy = { version = "0.13.2", default-features = false, features = [] }
bevy_renet.workspace = true
