[package]
name = "networking-simplenet-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
networking-simplenet-shared = { path = "../shared" }
client-graphics = {  path = "../../client/graphics" }
shared-domain = { path = "../../shared/domain" }

bevy_simplenet.workspace = true
enfync.workspace = true
bevy = { version = "0.13.2", default-features = false, features = [] }
url.workspace = true

bincode.workspace = true
serde.workspace = true