[package]
name = "networking-simplenet-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
networking-simplenet-shared = { path = "../shared" }
game-logic = { path = "../../game/logic" }
shared-domain = { path = "../../shared/domain" }

bevy_simplenet.workspace = true
url.workspace = true
enfync.workspace = true
bincode.workspace = true
serde.workspace = true
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "ktx2",
    "png",
    "tonemapping_luts",
    "zstd",
    "x11",
] }
