[package]
name = "networking-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
networking-shared = { path = "../shared" }
client-graphics = {  path = "../../client/graphics" }
shared-domain = { path = "../../shared/domain" }

enfync.workspace = true
bevy.workspace = true
url.workspace = true

bincode.workspace = true
serde.workspace = true

[dependencies.bevy_simplenet]
workspace = true
features = ["bevy", "client"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = ["Window", "Location", "console"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.fastrand]
workspace = true

# Fastrand needs the `js` feature to avoid having fully predetermistic output on WASM
[target.'cfg(target_arch = "wasm32")'.dependencies.fastrand]
workspace = true
features = ["js"]