[package]
name = "networking-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
networking-shared = { path = "../shared" }
client-graphics = {  path = "../../client/graphics" }
shared-domain = { path = "../../shared/domain" }
shared-util = { path = "../../shared/util" }
bevy.workspace = true
url.workspace = true
bincode.workspace = true
enfync.workspace = true
clap.workspace = true
log = "0.4.22"

[dependencies.bevy_simplenet]
workspace = true
features = ["bevy", "client"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.fastrand]
workspace = true

# Fastrand needs the `js` feature to avoid having fully predetermistic output on WASM
[target.'cfg(target_arch = "wasm32")'.dependencies.fastrand]
workspace = true
features = ["js"]