[package]
name = "networking-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
networking-shared = { path = "../shared" }
game-logic = { path = "../../game/logic" }
shared-domain = { path = "../../shared/domain" }

bevy_simplenet = { version = "0.11.0", default-features = false, features = ["bevy", "server"] }
url.workspace = true
enfync.workspace = true
bincode.workspace = true
serde.workspace = true

axum.workspace = true
tokio.workspace = true

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs"] }

bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "ktx2",
    "png",
    "tonemapping_luts",
    "zstd",
    "x11",
] }
