[package]
name = "networking-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
networking-shared = { path = "../shared" }
game-logic = { path = "../../game/logic" }
shared-domain = { path = "../../shared/domain" }

log.workspace = true
enfync.workspace = true
bincode.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
tokio.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tower-http]
workspace = true
features = ["fs"]

[dependencies.bevy_simplenet]
workspace = true
features = ["bevy", "server"]

[dependencies.bevy]
workspace = true
features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "ktx2",
    "png",
    "tonemapping_luts",
    "zstd",
    "x11",
]
