[package]
name = "shared-domain"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-util = { path = "../util" }

# Note - not allowed to have a `bevy` (except `bevy_math`) or any networking dependencies!
serde.workspace = true
uuid.workspace = true
fastrand.workspace = true
bevy_math.workspace = true
log.workspace = true
pathfinding.workspace = true