[package]
name = "shared-util"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Note - not allowed to have a `bevy` or any networking dependencies!
serde.workspace = true
fastrand.workspace = true
bevy_math.workspace = true